[project]
name = "onokoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FumiHubCNS", email = "fendo@cns.s.u-tokyo.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
